Moves AndroidAutoIdrive to AAIdrive

--- a/AndroidAutoIdrive/faq.html
+++ b/AndroidAutoIdrive/faq.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="utf8">
-    <meta http-equiv="refresh" content="0; url=https://bimmergestalt.github.io/AndroidAutoIdrive/faq">
+    <meta http-equiv="refresh" content="0; url=https://bimmergestalt.github.io/AAIdrive/faq">
     <title>Moved</title>
 </head>
 <body>
-    <p>This page has moved, please update any links: <a href="https://bimmergestalt.github.io/AndroidAutoIdrive/faq">https://bimmergestalt.github.io/AndroidAutoIdrive/faq</a></p>
+    <p>This page has moved, please update any links: <a href="https://bimmergestalt.github.io/AAIdrive/faq">https://bimmergestalt.github.io/AAIdrive/faq</a></p>
 </body>
 </html>
