--- a/AndroidAutoIdrive/gallery.html
+++ b/AndroidAutoIdrive/gallery.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="utf8">
-    <meta http-equiv="refresh" content="0; url=https://bimmergestalt.github.io/AndroidAutoIdrive/gallery">
+    <meta http-equiv="refresh" content="0; url=https://bimmergestalt.github.io/AAIdrive/gallery">
     <title>Moved</title>
 </head>
 <body>
-    <p>This page has moved, please update any links: <a href="https://bimmergestalt.github.io/AndroidAutoIdrive/gallery">https://bimmergestalt.github.io/AndroidAutoIdrive/gallery</a></p>
+    <p>This page has moved, please update any links: <a href="https://bimmergestalt.github.io/AAIdrive/gallery">https://bimmergestalt.github.io/AAIdrive/gallery</a></p>
 </body>
 </html>
