--- a/AndroidAutoIdrive/support.html
+++ b/AndroidAutoIdrive/support.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="utf8">
-    <meta http-equiv="refresh" content="0; url=https://bimmergestalt.github.io/AndroidAutoIdrive/support">
+    <meta http-equiv="refresh" content="0; url=https://bimmergestalt.github.io/AAIdrive/support">
     <title>Moved</title>
 </head>
 <body>
-    <p>This page has moved, please update any links: <a href="https://bimmergestalt.github.io/AndroidAutoIdrive/support">https://bimmergestalt.github.io/AndroidAutoIdrive/support</a></p>
+    <p>This page has moved, please update any links: <a href="https://bimmergestalt.github.io/AAIdrive/support">https://bimmergestalt.github.io/AAIdrive/support</a></p>
 </body>
 </html>
