--- a/AndroidAutoIdrive/connection.html
+++ b/AndroidAutoIdrive/connection.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="utf8">
-    <meta http-equiv="refresh" content="0; url=https://bimmergestalt.github.io/AndroidAutoIdrive/connection">
+    <meta http-equiv="refresh" content="0; url=https://bimmergestalt.github.io/AAIdrive/connection">
     <title>Moved</title>
 </head>
 <body>
-    <p>This page has moved, please update any links: <a href="https://bimmergestalt.github.io/AndroidAutoIdrive/connection">https://bimmergestalt.github.io/AndroidAutoIdrive/connection</a></p>
+    <p>This page has moved, please update any links: <a href="https://bimmergestalt.github.io/AAIdrive/connection">https://bimmergestalt.github.io/AAIdrive/connection</a></p>
 </body>
 </html>
